--- a/main.css
+++ b/main.css
@@ -64,11 +64,7 @@ footer i:hover
 
 @media all and (max-width: 450px)
 {
-  h3.display-3
-  {
-    font-size: 24px;
-  }
-  h3 
+  h3,h3.display-3
   {
     font-size: 24px;
   }
