--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,7 +6,7 @@ $skills-color: HSL(282.99,44.37%,29.61%);
 $contactform-background-color: black;
 $nav-background-color: hsl(300,100%,25.1%);
 $max-width: 800px;
-$media-query-breakpoint1: 800px; 
+$media-query-breakpoint1: 800px;
 $vert-menu-width: 120px;
 p,i {
   font-family: $body-font;
@@ -44,7 +44,7 @@ body {
   padding-bottom: 20px;
   font-family: $body-font;
  span  {
-  width: calc(100%/3); 
+  width: calc(100%/3);
   padding: 10px;
    box-sizing: border-box;
    i{
@@ -78,7 +78,7 @@ p:first-of-type {
   border:1px solid white;
   p{
     padding-left: 5px;
-    &:first-of-type { 
+    &:first-of-type {
       font-family: $art-font;
       font-weight: 800;
       font-size: 80px;
@@ -140,7 +140,7 @@ img {
   max-width: $max-width;
   width: 100%;
   box-sizing: border-box;
-  align-items: center; 
+  align-items: center;
   margin: 0 auto;
  i {
   font-size: 60px;
@@ -158,7 +158,7 @@ img {
     flex: 1;
     box-sizing: border-box;
     margin-top: 5px;
-    height: 180px;  
+    height: 180px;
     max-width: 320px;
     }
   }
@@ -216,7 +216,7 @@ input,textarea {
 }
 
 
-input:focus, 
+input:focus,
 textarea:focus {
   outline: 1px solid #9A4EAE
 }
@@ -255,16 +255,16 @@ input[type="submit"]{
     section {
     margin-left: $vert-menu-width;
   }
-  
+
   input[type="submit"]{
     height: 20px;
     border-radius: 5px;
     margin: 0 auto;
     margin-top: 5px;
   }
-  
+
   #hamburgericon {
-    display:none;  
+    display:none;
   }
   #flair {
     margin: 5px 10px;
@@ -284,7 +284,7 @@ input[type="submit"]{
       width: 50%;
      }
   }
-  
+
   #wrapper {
     flex: 1;
   }
@@ -296,3 +296,7 @@ input[type="submit"]{
     }
   }
 }
+
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
+@import "~font-mfizz/dist/font-mfizz.css"
