Fix font import

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/*!
+@import url(https://fonts.googleapis.com/css?family=Lora|Ubuntu|Baumans|);/*!
  * Font Mfizz 2.4.1
  * Copyright 2013-2017 Fizzed, Inc.
  * MIT License
